--- a/web/test.css
+++ b/web/test.css
@@ -1,95 +1,207 @@
+/*for IE*/
 body {
-	background-color: #ffffff;
+	background-color: #000;
 	overflow: auto;
 }
 
-img.bg{
-	min-height: 650px;
-	min-width: 1024px;
-    width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-}
-@media screen and (max-width: 1024px){
-	img.bg {
-	left: 50%;
-	margin-left: -512px;
-	}
-}
-
-
-div#container {
-
-}
-
 #title{
-	-webkit-transform : rotate(-45deg);
-	-moz-transform: rotate(-45deg);
-	width : 160px;
-	height : 60px;
-	margin-top : 50px;
-	margin-left : 0px;
-	text-align : center;
+	position: absolute;
+	top: 20px;
+	left: 20px;
+	width : 220px;
+	height : 110px;
 	color: #fff
 }
 
-
-.area0{
-	background-color: transparent;
-	border: none;
-	resize: none;
-	overflow: hidden;
-	position: fixed;
-	top: 50%;
-	left: 40%;
-	font-size: 1.5em;
-	color: #fff;
+#opArea1{
+	visibility : hidden;
+	display: none;
 }
 
-textarea.area{
+#txtArea{
 	background-color: #fff;
-	opacity: 0.8;
-	width:260px;
-	height:300px;
+	width:330px;
+	height:440px;
 	resize: none;
-	visibility: hidden;
 	position: absolute;
-	left: 20px; 
+	top: 240px;
+	left: 240px;
 	font-size: 1.11em;
 	color: #000;
 }
 
-input.subbutton{
+.mainbutton{
 	background-color: #fff;
-	opacity: 0.5;
-	width:160px;
-	height:80px;
-	border-radius: 10px;
-	position: absolute;
-	left: 400px;
+	width:110px;
+	height:110px;
+	color: #000;
 	font-size: 1.7em;
 }
 
-input.subsubbutton{
+#button1{
+	position: absolute;
+	top:570px;
+	left:130px;
+}
+
+#button2{
+	position: absolute;
+	top:130px;
+	left:460px;
+}
+
+#button3{
+	position: absolute;
+	top:570px;
+	left:20px;
+}
+
+#button4{
+	position: absolute;
+	top:570px;
+	left:900px;
+}
+
+.subbutton{
 	background-color: #fff;
-	opacity: 0.5;
+	width:110px;
+	height:220px;
+	font-size: 1.7em;
 	visibility: hidden;
-	width:220px;
-	height:80px;
-	border-radius: 10px;
-	position: absolute;
-	left: 590px;
-	font-size: 1.7em;
 }
 
-input.button{
-	background-color: #fff;
-	opacity: 0.5;
-	width:80px;
-	height:80px;
-	border-radius: 40px;
+#subbutton1{
 	position: absolute;
-	left: 300px;
+	top:460px;
+	left:570px;
+}
+#subbutton2{
+	position: absolute;
+	top:130px;
+	left:20px;
+}
+#subbutton3{
+	position: absolute;
+	top:20px;
+	left:680px;
+}
+#subbutton4{
+	position: absolute;
+	top:20px;
+	left:900px;
+}
+
+.contains{
+	background-color: #fff;
+	font-size: 1.7em;
+	visibility: hidden;	
+}
+
+#contains21{
+	width:220px;
+	height:110px;
+	position: absolute;
+	top: 20px;
+	left: 460px;
+}
+#contains22{
+	width:220px;
+	height:110px;
+	position: absolute;
+	top: 130px;
+	left: 130px;
+}
+#contains23{
+	width:220px;
+	height:110px;
+	position: absolute;
+	top: 240px;
+	left: 570px;
+}
+#contains24{
+	width:220px;
+	height:110px;
+	position: absolute;
+	top: 350px;
+	left: 20px;
+}
+#contains25{
+	width:220px;
+	height:110px;
+	position: absolute;
+	top: 350px;
+	left: 680px;
+}
+#contains26{
+	width:220px;
+	height:110px;
+	position: absolute;
+	top: 460px;
+	left: 790px;
+}
+#contains27{
+	width:220px;
+	height:110px;
+	position: absolute;
+	top: 460px;
+	left: 20px;
+}
+
+#contains11{
+	width:110px;
+	height:220px;
+	position: absolute;
+	top: 20px;
+	left: 350px;
+}
+#contains12{
+	width:110px;
+	height:220px;
+	position: absolute;
+	top: 460px;
+	left: 680px;
+}
+#contains13{
+	width:110px;
+	height:220px;
+	position: absolute;
+	top: 240px;
+	left: 900px;
+}
+
+#contains41{
+	width: 220px;
+	height: 110px;
+	position: absolute;
+	top: 680px;
+	left: 20px;
+}
+#contains42{
+	width: 220px;
+	height: 110px;
+	position: absolute;
+	top: 680px;
+	left: 790px;
+}
+
+#contains31{
+	width: 110px;
+	height: 110px;
+	position: absolute;
+	top: 680px;
+	left: 240px;
+}
+#contains32{
+	width: 110px;
+	height: 110px;
+	position: absolute;
+	top: 680px;
+	left: 350px;
+}
+#contains33{
+	width: 110px;
+	height: 110px;
+	position: absolute;
+	top: 680px;
+	left: 460px;
 }
