--- a/web/test.css
+++ b/web/test.css
@@ -202,6 +202,14 @@ body {
 	width: 110px;
 	height: 110px;
 	position: absolute;
+	top: 20px;
+	left: 790px;
+}
+
+#contains34{
+	width: 110px;
+	height: 110px;
+	position: absolute;
 	top: 680px;
 	left: 460px;
 }
