--- a/web/webpage.css
+++ b/web/webpage.css
@@ -25,6 +25,27 @@ img.bg{
 	-moz-transform: rotate(-45deg);
 }
 
+#img1{
+	position: absolute;
+	top: 40%;
+	left: 40%;
+}
+#img2{
+	position: absolute;
+	top: 40%;
+	left: 40%;
+}
+#img3{
+	position: absolute;
+	top: 40%;
+	left: 40%;
+}
+#img4{
+	position: absolute;
+	top: 40%;
+	left: 40%;
+}
+
 #opArea1{
 	position: absolute;
 	top: 50%;
@@ -63,8 +84,12 @@ img.bg{
 	background: #fff;
 	background-repeat: no-repeat;
 	background-position: center;
-	opacity: 0.5;
+	opacity: 0.7;
 	color: #fff
+}
+
+.mainbutton:hover{
+	/*background-color: #0ff;*/
 }
 
 #button1{
@@ -226,5 +251,11 @@ img.bg{
 #contains33{
 	position: absolute;
 	top: 450px;
+	left: 590px;
+}
+
+#contains34{
+	position: absolute;
+	top: 530px;
 	left: 590px;
 }
