--- a/web/test.css
+++ b/web/test.css
@@ -213,3 +213,27 @@ body {
 	top: 680px;
 	left: 460px;
 }
+
+#contains35{
+	width: 110px;
+	height: 110px;
+	position: absolute;
+	top: 680px;
+	left: 680px;
+}
+
+#contains36{
+	width: 110px;
+	height: 110px;
+	position: absolute;
+	top: 20px;
+	left: 240px;
+}
+
+#contains37{
+	width: 110px;
+	height: 110px;
+	position: absolute;
+	top: 350px;
+	left: 570px;
+}
