--- a/web/test.css
+++ b/web/test.css
@@ -237,3 +237,19 @@ body {
 	top: 350px;
 	left: 570px;
 }
+
+#contains38{
+	width: 110px;
+	height: 110px;
+	position: absolute;
+	top: 130px;
+	left: 790px;
+}
+
+#contains39{
+	width: 110px;
+	height: 110px;
+	position: absolute;
+	top: 240px;
+	left: 790px;
+}
