--- a/web/webpage.css
+++ b/web/webpage.css
@@ -276,3 +276,15 @@ img.bg{
 	top: 530px;
 	left: 590px;
 }
+
+#contains38{
+	position: absolute;
+	top: 610px;
+	left: 590px;
+}
+
+#contains39{
+	position: absolute;
+	top: 690px;
+	left: 590px;
+}
