--- a/web/test.css
+++ b/web/test.css
@@ -253,3 +253,11 @@ body {
 	top: 240px;
 	left: 790px;
 }
+
+#contains310{
+	width: 110px;
+	height: 110px;
+	position: absolute;
+	top: 680px;
+	left: 570px;
+}
