--- a/web/webpage.css
+++ b/web/webpage.css
@@ -273,24 +273,39 @@ img.bg{
 
 #contains37{
 	position: absolute;
-	top: 290px;
+	top: 130px;
 	left: 810px;
 }
 
 #contains38{
 	position: absolute;
-	top: 370px;
+	top: 210px;
 	left: 810px;
 }
 
 #contains39{
 	position: absolute;
-	top: 450px;
+	top: 290px;
 	left: 810px;
 }
 
 #contains310{
 	position: absolute;
+	top: 370px;
+	left: 810px;
+}
+
+#contains311{
+	position: absolute;
+	top: 450px;
+	left: 810px;
+}
+
+#contains312{
+	position: absolute;
 	top: 530px;
 	left: 810px;
+}
+#contains313{
+	display:none;
 }
